--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,16 @@ topnav_title: PHP Documentation
 site_title: PHP Documentation
 # this appears in the html browser tab for the site title (seen mostly by search engines, not users)
 
-company_name: Your company
+company_name: Charls
 # this appears in the footer
 
-github_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
+github_editme_path: Riwajchalise/phpblog
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 # gitlab_editme_path: tomjoht/documentation-theme-jekyll/blob/gh-pages/
 # if you're using GitLab, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
-disqus_shortname: idratherbewriting
+disqus_shortname: riwajchalise
 # if you're using disqus for comments, add the shortname here. if not, leave this value blank.
 
 google_analytics: UA-66296557-1
