--- a/_data/sidebars/mydoc_sidebar.yml
+++ b/_data/sidebars/mydoc_sidebar.yml
@@ -51,7 +51,11 @@ entries:
 
     - title: HTML Table
       url: /mydoc_table.html
-      output: web, pdf      
+      output: web, pdf
+      
+    - title: echo
+      url: /mydoc_echo.html
+      output: web, pdf
  
     - title: HTML Forms
       url: /mydoc_forms.html
@@ -62,10 +66,6 @@ entries:
   - title: PHP Intro
     output: web, pdf
     folderitems:
-
-    - title: echo
-      url: /mydoc_ech.html
-      output: web, pdf
 
     - title: Comments
       url: /mydoc_comments.html
